--- a/app/src/main/assets/privacy_policy.html
+++ b/app/src/main/assets/privacy_policy.html
@@ -98,8 +98,8 @@
                   </p> <p><strong>Contact Us</strong></p> <p>
                     If you have any questions or suggestions about
                     my Privacy Policy, do not hesitate to contact
-                    me at <b><a href="mailto:shubhamjaisw1997@gmail.com">shubhamjaisw1997@gmail.com</a></b>.
-                  </p>
+                    me at my personal mail <b><a href="mailto:shubhamjaisw1997@gmail.com">shubhamjaisw1997@gmail.com</a></b>.
+                  </p><p>You may contact to my developer account<b><a href="mailto:kauale.developer@gmail.com">kauale.developer@gmail.com</a></b> </p>
     </body>
     </html>
       
