--- a/app/src/main/assets/privacy_policy.html
+++ b/app/src/main/assets/privacy_policy.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <h2>Privacy Policy</h2> <p>
-                     <b>I,Shubham Jaiswal</b> built the <b>App Launcher</b> app. This SERVICE is provided
+                     <b>I,Shubham Jaiswal(hereinafter “Developer”)</b> built the <b>App Launcher</b> app to participate in <b>Digital India AatmaNirbhar Bharat Innovate Challenge</b>.This SERVICE is provided
                      at no cost and is intended for
                     use as is.
                   </p> <p>
@@ -17,27 +17,27 @@
                     disclosure of Personal Information if anyone decided to use
                     my Service.
                   </p> <p>
-                    If you choose to use my Service, then you agree
+                    If you choose to use Developer's Service, then you agree
                     to the collection and use of information in relation to this
-                    policy. The Personal Information that I collect is
+                    policy. The Personal Information that Developer collect is
                     used for providing and improving the Service.
-                    I will not use or share your
+                    Developer will not use or share your
                     information with anyone except as described in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
-                    I may require you to provide us with certain
+                    Developer may require you to provide us with certain
                     personally identifiable information. The
-                    information that I request will be
-                    retained on your device and is not collected by me in any way.
+                    information that developer request will be
+                    retained on your device and is not collected by developer in any way.
                   </p> <p>
                     The app does use third party services that may collect
                     information used to identify you.
                   </p> <div><p>
                       Link to privacy policy of third party service providers
                       used by the app
-                    </p></div> <p><strong>Log Data</strong></p> <p>
-                    I want to inform you that whenever
+                    </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li><li><a href="https://firebase.google.com/policies/analytics" target="_blank">Google Analytics for Firebase</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
+                    Developer want to inform you that whenever
                     you use my Service, in a case of an error in the
                     app I collect data and information (through third
                     party products) on your phone called Log Data. This Log Data
@@ -60,46 +60,48 @@
                     device. If you choose to refuse our cookies, you may not be
                     able to use some portions of this Service.
                   </p> <p><strong>Service Providers</strong></p> <p>
-                    I may employ third-party companies
+                    Developer may employ third-party companies
                     and individuals due to the following reasons:
                   </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p>
-                    I want to inform users of this
+                    Developer want to inform users of this
                     Service that these third parties have access to your
                     Personal Information. The reason is to perform the tasks
                     assigned to them on our behalf. However, they are obligated
                     not to disclose or use the information for any other
                     purpose.
                   </p> <p><strong>Security</strong></p> <p>
-                    I value your trust in providing us
-                    your Personal Information, thus we are striving to use
+                    Developer value your trust in providing us
+                    your Personal Information, thus striving to use
                     commercially acceptable means of protecting it. But remember
                     that no method of transmission over the internet, or method
                     of electronic storage is 100% secure and reliable, and
-                    I cannot guarantee its absolute security.
+                    developer cannot guarantee its absolute security.
 
                   </p> <p><strong>Children’s Privacy</strong></p> <p>
                     These Services do not address anyone under the age of 13.
-                    I do not knowingly collect personally
+                    Developer do not knowingly collect personally
                     identifiable information from children under 13. In the case
-                    I discover that a child under 13 has provided
+                    if discover that a child under 13 has provided
                     me with personal information,
-                    I immediately delete this from our servers. If you
+                    developer immediately delete this from our servers. If you
                     are a parent or guardian and you are aware that your child
                     has provided us with personal information, please contact
-                    me so that I will be able to do
+                    developer to do
                     necessary actions.
                   </p> <p><strong>Changes to This Privacy Policy</strong></p> <p>
-                    I may update our Privacy Policy from
+                    Developer may update our Privacy Policy from
                     time to time. Thus, you are advised to review this page
-                    periodically for any changes. I will
+                    periodically for any changes.Developer will
                     notify you of any changes by posting the new Privacy Policy
                     on this page. These changes are effective immediately after
                     they are posted on this page.
-                  </p> <p><strong>Contact Us</strong></p> <p>
+                  </p> <p><strong>Terms and Conditions</strong></p> <p>
+                     To participate as contestant in <b>Digital India AatmaNirbhar Bharat Innovate Challenge</b>,Developer agrees to the terms and conditions of <b><a href="https://innovate.mygov.in/app-challenge/#tab5"  target="_blank">Digital India AatmaNirbhar Bharat Innovate Challenge</a></b> and we are binding to decision of Govt.
+    </p> <p><strong>Contact Us</strong></p> <p>
                     If you have any questions or suggestions about
                     my Privacy Policy, do not hesitate to contact
                     me at my personal mail <b><a href="mailto:shubhamjaisw1997@gmail.com">shubhamjaisw1997@gmail.com</a></b>.
-                  </p><p>You may contact to my developer account<b><a href="mailto:kauale.developer@gmail.com">kauale.developer@gmail.com</a></b> </p>
+                  </p><p>You may contact to my developer email <b><a href="mailto:kauale.developer@gmail.com">kauale.developer@gmail.com</a></b> </p>
     </body>
     </html>
       
